--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="main-container">
         <nav class="navbar">
-            <div class="logo">Karthick S</div>
+            <div class="logo">Karthick S</div><br>
+            <p>Geo Spatial Engineer</p>
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
                 
