--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <script defer src="script.js"></script>
 </head>
 <body>
+    <p>Geo Spatial Engineer</p>
     <div class="main-container">
         <nav class="navbar">
-            <div class="logo">Karthick S</div><br>
-            <p>Geo Spatial Engineer</p>
+            <div class="logo">Karthick S</div>
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
                 
