--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     
     <div class="main-container">
         <nav class="navbar">
-            <div class="logo">Karthick S</div><br>
-            <div class="logo">Geo Spatial Engineer</div>
+            <div class="logo">KARTHICK S</div><br>
+            <div class="logo">GEO SPATIAL ENGINEER</div>
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
                 
