--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    
+    <img src="LAND.jpg" alt="Trulli" width="500" height="333">
     <div class="main-container">
         <nav class="navbar">
             <div class="logo">KARTHICK S</div><br>
