--- a/index.html
+++ b/index.html
@@ -37,4 +37,7 @@
     </div>
        
 </body>
+
+    <div style="background-image: url('location.jpg'); background-size: cover; background-position: center;">
+</div>
 </html>
