--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
        
 </body>
 
-    <div style="background-image: url('location.jpg'); background-size: cover; background-position: center;">
+    <div style="background-image1: url('location.jpg'); background-size: cover; background-position: center;">
 </div>
 </html>
