--- a/experience.html
+++ b/experience.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+        <div style="background-image: url('LAND.jpg'); background-size: cover; background-position: center;">
+</div>
     <div class="section experience">
         <h2>Experience</h2>
 
