--- a/experience.html
+++ b/experience.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="custom-background"></div>
     <div class="section experience">
         <h2>Experience</h2>
 
