--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+/* Navbar */
+    <div class="navbar">
+        <div class="logo">Portfolio</div>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="about.html">About</a></li>
+            
+        </ul>
+    </div>
     <div class="section contact">
         <h2>Contact</h2>
         <p>Email: karthick.gispro@gmail.com</p>
