--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
         <div class="logo">Portfolio</div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="skills.html">Skills</a></li>
+            <li><a href="experience.html">Experience</a></li>
            
             <li><a href="projects.html">Projects</a></li>
             <li><a href="about.html">About</a></li>
