--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
             
         </div>
     </div>
+
+    <--profile Picture -->
+        <div class="profile-container">
+        <img src="profile.jpg" alt="Karthick's Profile Picture" class="profile-pic">
+        <h1>Karthick S</h1>
+        <p>GIS Analyst | Geo-Spatial Engineer</p>
+    </div>
 </body>
 
 
